--- a/platformio.ini
+++ b/platformio.ini
@@ -29,3 +29,7 @@ lib_deps =
     adafruit/Adafruit GFX Library@^1.11.9
     adafruit/Adafruit SSD1306@^2.5.7
     bblanchon/ArduinoJson@^7.0.4
+
+; SPIFFS configuration
+board_build.filesystem = spiffs
+board_build.partitions = default.csv
