--- a/platformio.ini
+++ b/platformio.ini
@@ -13,19 +13,16 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.flash_size = 16MB
-board_build.psram_type = opi
-board_build.memory_type = opi_opi
+monitor_speed = 115200
 build_flags = 
-    -DBOARD_HAS_PSRAM
     -DARDUINO_ESP32S3_DEV
     -DARDUINO_RUNNING_CORE=1
     -DARDUINO_EVENT_RUNNING_CORE=1
-    -DCONFIG_ESP32S3_DEFAULT_CPU_FREQ_160=1
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/AsyncTCP.git
     crankyoldgit/IRremoteESP8266@^2.8.6
-    adafruit/Adafruit SHT31 Library@^2.2.2
+    sensirion/arduino-sht@^1.2.2
     adafruit/Adafruit GFX Library@^1.11.9
     adafruit/Adafruit SSD1306@^2.5.7
     bblanchon/ArduinoJson@^7.0.4
