--- a/platformio.ini
+++ b/platformio.ini
@@ -32,26 +32,17 @@ board_build.filesystem = spiffs
 board_build.partitions = default.csv
 
 ; Test environment for unit testing
-[env:test]
-platform = espressif32
-board = esp32-s3-devkitc-1
-framework = arduino
-test_framework = unity
-test_build_src = false
-build_flags = 
-    -DARDUINO_ESP32S3_DEV
-    -DARDUINO_RUNNING_CORE=1
-    -DARDUINO_EVENT_RUNNING_CORE=1
-    -DUNIT_TEST
-lib_deps = 
-    bblanchon/ArduinoJson@^7.0.4
-
-; Native test environment for desktop testing
-[env:native_test]
-platform = native
-test_framework = unity
-build_flags = 
-    -DUNIT_TEST
-    -std=c++11
-lib_deps = 
-    bblanchon/ArduinoJson@^7.0.4
+# [env:test]
+# platform = espressif32
+# board = esp32-s3-devkitc-1
+# framework = arduino
+# test_framework = unity
+# test_build_src = false
+# test_ignore = test_integration
+# build_flags = 
+#     -DARDUINO_ESP32S3_DEV
+#     -DARDUINO_RUNNING_CORE=1
+#     -DARDUINO_EVENT_RUNNING_CORE=1
+#     -DUNIT_TEST
+# lib_deps = 
+#     bblanchon/ArduinoJson@^7.0.4
